@@ -531,37 +531,11 @@ packRegisters (eBBlock * ebp)
          then mark this as rematerialisable   */
       if (ic->op == ADDRESS_OF && 
         IS_ITEMP (IC_RESULT (ic)) && bitVectnBitsOn (OP_DEFS (IC_RESULT (ic))) == 1 && !IS_PARM (IC_RESULT (ic)) /* The receiving of the parameter is not accounted for in DEFS */ &&
-        IS_TRUE_SYMOP (IC_LEFT (ic)) && !OP_SYMBOL (IC_LEFT (ic))->onStack)
+        IS_TRUE_SYMOP (IC_LEFT (ic)))
         {
           OP_SYMBOL (IC_RESULT (ic))->remat = 1;
           OP_SYMBOL (IC_RESULT (ic))->rematiCode = ic;
           OP_SYMBOL (IC_RESULT (ic))->usl.spillLoc = NULL;
-        }
-
-      if (ic->op == ADDRESS_OF && IS_ITEMP (IC_RESULT (ic)) && bitVectnBitsOn (OP_DEFS (IC_RESULT (ic))) == 1 && !IS_PARM (IC_RESULT (ic)) && /* Can remat stack locations, but they can currently only be used for pointer read / write */
-        IS_TRUE_SYMOP (IC_LEFT (ic)) && OP_SYMBOL (IC_LEFT (ic))->onStack)
-        {
-          bool ok = true;
-          bitVect *uses = bitVectCopy (OP_USES (IC_RESULT (ic)));
-          for (int bit = bitVectFirstBit (uses); bitVectnBitsOn (uses); bitVectUnSetBit (uses, bit), bit = bitVectFirstBit (uses))
-            {
-              const iCode *uic = hTabItemWithKey (iCodehTab, bit);
-              wassert (uic);
-              if (uic->op != SET_VALUE_AT_ADDRESS && uic->op != GET_VALUE_AT_ADDRESS)
-                {
-                  ok = false;
-                  break;
-                }
-            }
-
-          if (ok)
-            {
-              OP_SYMBOL (IC_RESULT (ic))->remat = 1;
-              OP_SYMBOL (IC_RESULT (ic))->rematiCode = ic;
-              OP_SYMBOL (IC_RESULT (ic))->usl.spillLoc = NULL;
-            }
-
-          freeBitVect (uses);
         }
 
       /* Safe: just propagates the remat flag */
